--- a/app/src/main/res/layout/medicine_item.xml
+++ b/app/src/main/res/layout/medicine_item.xml
@@ -30,7 +30,7 @@
             tools:layout_editor_absoluteY="464dp" />
 
         <ImageButton
-            android:id="@+id/delete"
+            android:id="@+id/info"
             android:layout_width="57dp"
             android:layout_height="52dp"
             app:srcCompat="@mipmap/ic_launcher"
