--- a/app/src/main/res/layout/patient_item.xml
+++ b/app/src/main/res/layout/patient_item.xml
@@ -13,6 +13,7 @@
         android:ems="10"
         android:hint="ID"
         android:inputType="textPersonName"
+        android:textSize="24sp"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="0dp" />
 
