--- a/app/src/main/res/layout/activity_patients_list.xml
+++ b/app/src/main/res/layout/activity_patients_list.xml
@@ -43,27 +43,27 @@
 
     <EditText
         android:id="@+id/search"
-        android:layout_width="wrap_content"
+        android:layout_width="277dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="11dp"
+        android:autofillHints=""
         android:ems="10"
         android:hint="search"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/patientList"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:autofillHints="" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnsearch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:text="search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
