--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,20 +9,22 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="309dp"
-        android:layout_height="117dp"
+        android:layout_width="170dp"
+        android:layout_height="71dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="104dp"
+        android:layout_marginTop="76dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:text="WELCOME TO DOCPATIENTS"
+        android:layout_marginBottom="8dp"
+        android:text="@string/welcome_to_docpatients"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
         android:textColor="@android:color/holo_blue_dark"
-        android:textSize="40sp"
+        android:textSize="24sp"
         android:typeface="serif"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.511"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,10 +32,12 @@
         android:id="@+id/imageView"
         android:layout_width="147dp"
         android:layout_height="150dp"
-        android:layout_marginBottom="97dp"
+        android:layout_marginBottom="148dp"
+        android:contentDescription="@drawable/docpatients"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        tools:srcCompat="@drawable/DocPatients" />
+        app:srcCompat="@drawable/docpatients" />
 
 </android.support.constraint.ConstraintLayout>
