--- a/app/src/main/res/layout/activity_patients_list.xml
+++ b/app/src/main/res/layout/activity_patients_list.xml
@@ -11,35 +11,30 @@
         android:id="@+id/fabAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="15dp"
         android:clickable="true"
         android:focusable="true"
         app:backgroundTint="@color/common_google_signin_btn_text_dark_default"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/patientList"
-        app:layout_constraintVertical_bias="1.0"
-        app:rippleColor="@color/common_google_signin_btn_text_light_default"
+        app:layout_constraintTop_toBottomOf="@+id/medicineList"
         app:srcCompat="@android:drawable/ic_input_add" />
 
     <ListView
         android:id="@+id/patientList"
         android:layout_width="0dp"
-        android:layout_height="442dp"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="60dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/fabAdd"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
-
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
+
+
 
